2003-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* cli/cli-logging.c (pop_output_files): Add void to function
	definition.

2003-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* cli/cli-logging.c: New file.
	* cli-out.c (struct ui_out_data): Add original_stream.
	(cli_redirect): New function.
	(cli_ui_out_impl): Add cli_redirect.
	(cli_out_new): Initialize original_stream.
	* ui-out.c (default_ui_out_impl): Add NULL for redirect member.
	(uo_redirect, ui_out_redirect): New.
	* ui-out.h (struct ui_out_impl): Add redirect member.
	(redirect_ftype): New.
	(ui_out_redirect): Add prototype.
	* Makefile.in: Add rules for cli-logging.c.
	* NEWS: Mention "set logging".

2003-07-02  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (struct frame_extra_info): new member:
	'stack_bought_valid'.
	(s390_get_frame_info): Set fextra_info->stack_bought_valid if we
	initialize fextra_info->stack_bought.
	(s390_frameless_function_invocation): Don't trust the value of
	fextra_info_ptr->stack_bought unless
	fextra_info->stack_bought_valid is set.

	New S390 prologue analyzer.
	* s390-tdep.c (struct prologue_value, enum pv_boolean): New types.
	(pv_set_to_unknown, pv_set_to_constant, pv_set_to_register,
	pv_constant_last, pv_add, pv_add_constant, pv_subtract,
	pv_logical_and, pv_is_identical, pv_is_register, pv_is_array_ref,
	compute_x_addr, s390_on_stack, s390_store,
	s390_get_signal_frame_info): New functions.
	(S390_NUM_SPILL_SLOTS): New macro.
	(s390_get_frame_info): Rewritten.
	(is_arg_reg): Deleted.

        Break out the decoding of S/390 instructions into separate
        functions, to make it more legible, and easier to check
        against the spec.
        * s390-tdep.c (is_ri, is_ril, is_rr, is_rre, is_rs, is_rse,
	is_rx, is_rxe): New functions.
	(op1_aghi, op2_aghi, op1_ahi, op2_ahi, op_ar, op_basr, op1_bras,
	op2_bras, op_l, op_la, op1_larl, op2_larl, op_lgr, op1_lghi,
	op2_lghi, op1_lhi, op2_lhi, op_lr, op_nr, op_ngr, op_s, op_st,